# quickstart

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
headers/: MainGame.h
src/: MainGame.cpp  main.cpp
